--- a/Kubernetes/Web/web-deployment.yaml
+++ b/Kubernetes/Web/web-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: webapp
-        image: webapp:latest
+        image: webapp:1.0.1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
@@ -24,7 +24,11 @@ spec:
         - name: webapp-config
           mountPath: /etc/nginx/nginx.conf
           subPath: nginx.conf
+        - name: webapp-logs
+          mountPath: /var/log/nginx
       volumes:
       - name: webapp-config
         configMap:
           name: webapp-config
+      - name: webapp-logs
+        emptyDir: {}
