--- a/Kubernetes/Promtail/promtail-clusterrole.yaml
+++ b/Kubernetes/Promtail/promtail-clusterrole.yaml
@@ -4,5 +4,19 @@ metadata:
   name: promtail-clusterrole
 rules:
 - apiGroups: [""]
-  resources: ["pods", "pods/log"]
+  resources: ["pods", "nodes", "pods/log"]
   verbs: ["get", "list", "watch"]
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: promtail-clusterrolebinding
+subjects:
+- kind: ServiceAccount
+  name: promtail
+  namespace: default
+roleRef:
+  kind: ClusterRole
+  name: promtail-clusterrole
+  apiGroup: rbac.authorization.k8s.io
