--- a/Kubernetes/Promtail/promtail-configmap.yaml
+++ b/Kubernetes/Promtail/promtail-configmap.yaml
@@ -15,19 +15,40 @@ data:
       - url: http://loki:3100/loki/api/v1/push
 
     scrape_configs:
-    - job_name: kubernetes-pods
-      kubernetes_sd_configs:
-        - role: pod
+      - job_name: kubernetes_pods
+        kubernetes_sd_configs:
+          - role: pod
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_controller_name]
+            target_label: __service__
+          - source_labels: [__meta_kubernetes_pod_node_name]
+            target_label: __host__
+          - action: labelmap
+            regex: __meta_kubernetes_pod_label_(.+)
+          - source_labels: [__meta_kubernetes_namespace]
+            target_label: namespace
+          - source_labels: [__meta_kubernetes_pod_name]
+            target_label: pod
+          - source_labels: [__meta_kubernetes_pod_container_name]
+            target_label: container
+          - replacement: /var/log/pods/*$1/*.log
+            separator: "/"
+            source_labels: [__meta_kubernetes_pod_uid, __meta_kubernetes_pod_container_name]
+            target_label: __path__
 
-      relabel_configs:
-      - source_labels: [__meta_kubernetes_namespace]
-        target_label: namespace
-      - source_labels: [__meta_kubernetes_pod_node_name]
-        target_label: node
-      - source_labels: [__meta_kubernetes_pod_name]
-        target_label: pod_name
-      - source_labels: [__meta_kubernetes_pod_container_name]
-        target_label: container_name
-      - action: labelmap
-        regex: __meta_kubernetes_pod_label_(.+)
-        replacement: $1
+      - job_name: nginx-interaction-logs
+        kubernetes_sd_configs:
+          - role: pod
+        relabel_configs:
+          - action: keep
+            source_labels: [__meta_kubernetes_pod_label_app]
+            regex: webapp
+          - source_labels: [__meta_kubernetes_namespace]
+            target_label: namespace
+          - source_labels: [__meta_kubernetes_pod_name]
+            target_label: pod
+          - source_labels: [__meta_kubernetes_pod_container_name]
+            target_label: container
+          - source_labels: [__meta_kubernetes_pod_uid, __meta_kubernetes_pod_container_name]
+            replacement: '/var/log/pods/${1}/${2}/*.log'
+            target_label: __path__
