--- a/Kubernetes/Grafana/grafana-datasource-configmap.yaml
+++ b/Kubernetes/Grafana/grafana-datasource-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-datasource-config
+  namespace: monitoring
 data:
   ds.yaml: |
     apiVersion: 1
