--- a/Kubernetes/Grafana/grafana-env-configmap.yaml
+++ b/Kubernetes/Grafana/grafana-env-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-env
+  namespace: monitoring
 data:
   GF_AUTH_ANONYMOUS_ENABLED: "true"
   GF_AUTH_ANONYMOUS_ORG_ROLE: "Admin"
