--- a/Kubernetes/Promtail/promtail-clusterrole.yaml
+++ b/Kubernetes/Promtail/promtail-clusterrole.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: promtail-clusterrole
+  namespace: monitoring
 rules:
 - apiGroups: [""]
   resources: ["pods", "nodes", "pods/log"]
@@ -15,7 +16,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: promtail
-  namespace: default
+  namespace: monitoring
 roleRef:
   kind: ClusterRole
   name: promtail-clusterrole
