--- a/Kubernetes/Web/web-ingress.yaml
+++ b/Kubernetes/Web/web-ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: webapp-ingress
+  namespace: web
   annotations:
     kubernetes.io/ingress.allow-http: "true"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
