modified grafana configmap and provider

--- a/Kubernetes/Grafana/grafana-dashboard-configmap.yaml
+++ b/Kubernetes/Grafana/grafana-dashboard-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-click-count-dashboard
+  namespace: monitoring
 data:
   click-count-dashboard.json: |
     {
