--- a/Kubernetes/Jenkins/jenkins-service.yaml
+++ b/Kubernetes/Jenkins/jenkins-service.yaml
@@ -7,6 +7,11 @@ spec:
   selector:
     app: jenkins
   ports:
-  - protocol: TCP
+  - name: web
+    protocol: TCP
     port: 8080
     targetPort: 8080
+  - name: jnlp
+    protocol: TCP
+    port: 50000
+    targetPort: 50000
