--- a/Kubernetes/Jenkins/jenkins-role.yaml
+++ b/Kubernetes/Jenkins/jenkins-role.yaml
@@ -10,6 +10,9 @@ rules:
 - apiGroups: [""]
   resources: ["configmaps"]
   verbs: ["get", "create", "update"]
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get", "list"]
 
 ---
 
