--- a/Kubernetes/Jenkins/jenkins-role.yaml
+++ b/Kubernetes/Jenkins/jenkins-role.yaml
@@ -6,13 +6,10 @@ metadata:
 rules:
 - apiGroups: [""]
   resources: ["secrets", "pods", "pods/log"]
-  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]  # Covering all verbs needed for secrets under one entry
 - apiGroups: [""]
   resources: ["configmaps"]
   verbs: ["get", "create", "update"]
-- apiGroups: [""]
-  resources: ["secrets"]
-  verbs: ["get", "list"]
 
 ---
 
