--- a/Kubernetes/Jenkins/jenkins-deployment.yaml
+++ b/Kubernetes/Jenkins/jenkins-deployment.yaml
@@ -26,7 +26,8 @@ spec:
             kubernetes-cli:1.12.1 \
             kubernetes-credentials-provider:1.273.v15e69b_55ea_8e \
             git:5.7.0 \
-            configuration-as-code:1932.v75cb_b_f1b_698d
+            configuration-as-code:1932.v75cb_b_f1b_698d \
+            ssh-slaves:3.1031.v72c6b_883b_869
         volumeMounts:
           - name: plugin-volume
             mountPath: /usr/share/jenkins/ref/plugins
