--- a/Kubernetes/Web/web-deployment.yaml
+++ b/Kubernetes/Web/web-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: webapp
-        image: webapp:{VERSION_TAG}
+        image: webapp:$VERSION_TAG
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
