--- a/Kubernetes/Jenkins/pipelines/Jenkinsfile
+++ b/Kubernetes/Jenkins/pipelines/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent {
         kubernetes {
-            inheritFrom 'kubeagent'
+            label 'kubeagent'
         }
     }
     environment {
