Install github plugin, and poll

--- a/Kubernetes/Jenkins/jenkins-deployment.yaml
+++ b/Kubernetes/Jenkins/jenkins-deployment.yaml
@@ -28,7 +28,8 @@ spec:
             git:5.7.0 \
             configuration-as-code:1932.v75cb_b_f1b_698d \
             pipeline-model-definition:2.2236.va_b_88ceec798f \
-            ssh-slaves:3.1031.v72c6b_883b_869
+            ssh-slaves:3.1031.v72c6b_883b_869 \
+            github:1.42.0
         volumeMounts:
           - name: plugin-volume
             mountPath: /usr/share/jenkins/ref/plugins
