added metrics endpoint for web service

--- a/Kubernetes/Web/Docker/nginx.conf
+++ b/Kubernetes/Web/Docker/nginx.conf
@@ -34,6 +34,10 @@ http {
             index index.html index.htm;
         }
 
+        location /metrics {
+            stub_status;
+        }
+
         location /log {
             internal;
             # Redirect the interaction log to stdout using the log_interaction format
